# chask-plant-modernization

./: .gitignore  404.html  CASE_STUDY.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  prompt-fase-0.md  prompt-fase-1.md  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
about/: index.html
case-study/: index.html
dashboard/: README.md  _components.py  app.py  requirements.txt
dashboard/pages/: energy.py  overview.py  project_management.py  reliability_process.py  roi_scenarios.py  statistics.py
data-dictionary/: index.html
data/analytics/: daily_synthetic.csv  monthly_enriched.csv
data/raw/: monthly_reconstructed.csv
data/staging/: monthly_validated.csv
docs/: about.md  case-study.md  data-dictionary.md  energy-analysis.md  findings.md  index.md
docs/project-management/: charter.md  index.md  risk-register.md  schedule.md  wbs.md
docs/source-documents/: Informe_Cierre_Panificadora_Chask.docx
energy-analysis/: index.html
findings/: index.html
notebooks/: 01_exploratory_analysis.ipynb  02_anomaly_detection.ipynb  03_statistical_tests.ipynb  04_findings_summary.ipynb  05_energy_and_process.ipynb
project-management/: cost-baseline.md  index.html  project-charter.md  risk-register.md  schedule.md  wbs.md
project-management/charter/: index.html
search/: search_index.json
source-documents/: La empresa Panificadora Chask.docx
src/chask/: __init__.py  (+1 more)
tests/: test_anomalies.py  test_config.py  test_dashboard.py  test_eda.py  test_ingest.py  test_kpis.py  test_load_profile.py  test_motors.py  test_pipeline.py  test_placeholder.py  test_reliability.py  test_roi.py  test_stats.py  test_synthetic.py  test_throughput.py  test_transform.py  test_validate.py  test_viz.py
(+31 files in other folders)
