[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chask"
version = "1.0.0"
description = "Data engineering and data science for the Panificadora Chask plant modernization project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthony Davila", email = "anthoadc@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pandera>=0.18",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
dashboard = [
    "streamlit>=1.28",
]
docs = [
    "mkdocs-material>=9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
